--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Learn consult</title>
-
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" >
@@ -22,9 +21,7 @@
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
-
-
-  </head> 
+  </head>
 
   <body>
 
@@ -39,7 +36,7 @@
     <!-- ***** Preloader End ***** -->
 
     <!-- Header -->
-    <header class="">
+  <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
          
@@ -55,7 +52,7 @@
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Category
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -64,7 +61,7 @@
                 </ul>
               </li>
 
-                     <li class="text-end pe-4 me-4 border-dark search-btn">
+              <li class="text-end pe-4 me-4 border-dark search-btn">
                             <div class="search-form">
                                 <form method="post" action="index.html">
                                     <div class="form-group">
@@ -75,18 +72,25 @@
                                     </div>
                                 </form> 
                             </div> 
-              </li> 
+              </li>
 
+             <li class="nav-item ">
+                 <a class="nav-link" href="../Views/Instructor/MyCourses.cshtml">My Courses
+                 </a>
+              </li> 
+             
+            
+              
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">For Instructors
+                <a class="nav-link" href="index.html">Add Course
                 </a>
               </li> 
-              
+             
               <li class="nav-item">
-                <a href="../templatemo_546_sixteen_clothing/login.html" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                <a href="../Laern consult project/login.html" class="nav-link" role="button" data-bs-toggle="button">Signout</a>
               </li>
               <li class="nav-item">
-                <a href="../templatemo_546_sixteen_clothing/signup.html" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
+                <a href="../Laern consult project/signup.html" class="nav-link" role="button" data-bs-toggle="button">Profile</a>
               </li>
             </ul>
          
@@ -123,7 +127,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="~/images/product_01.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Tittle goes here</h4></a>
                 <h6>Free</h6>
@@ -141,7 +145,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="~/images/product_02.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Tittle goes here</h4></a>
                 <h6>Paid</h6>
@@ -159,7 +163,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="~/images/product_03.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Tittle goes here</h4></a>
                 <h6>Free</h6>
@@ -182,7 +186,7 @@
 
 
         <!-- Latest Courses starts Here -->
-        <div class="latest-products">
+        <!--<div class="latest-products">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -193,7 +197,7 @@
               </div>
               <div class="col-md-4">
                 <div class="product-item">
-                  <a href="#"><img src="~/images/product_04.jpg" alt=""></a>
+                  <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
                   <div class="down-content">
                     <a href="#"><h4>Tittle goes here</h4></a>
                     <h6>Paid</h6>
@@ -211,7 +215,7 @@
               </div>
               <div class="col-md-4">
                 <div class="product-item">
-                  <a href="#"><img src="~/images/product_01.jpg" alt=""></a>
+                  <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
                   <div class="down-content">
                     <a href="#"><h4>Tittle goes here</h4></a>
                     <h6>Free</h6>
@@ -229,7 +233,7 @@
               </div>
               <div class="col-md-4">
                 <div class="product-item">
-                  <a href="#"><img src="~/images/product_01.jpg" alt=""></a>
+                  <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
                   <div class="down-content">
                     <a href="#"><h4>Tittle goes here</h4></a>
                     <h6>Free</h6>
@@ -247,9 +251,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <!-- Latest Courses Ends Here -->
-
+    
 
     <!-- Recent Reviews starts Here -->
     <div class="latest-products">
@@ -320,14 +324,14 @@
     </div>
     <!-- Recent Reviews Ends Here -->
 
-   <footer class="footer_area section_gap_top">
+    <footer class="footer_area section_gap_top">
       <div class="container">
         <div class="row single-footer-widget">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="copy_right_text">
-              <p>
+              <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   All Copyrights &copy reserved 
-                 </p>
+                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
           </div>
           <div class="col-md-4">
@@ -370,7 +374,6 @@
           }
       }
     </script>
-
 
   </body>
 
