--- a/WebApplication2/Views/Student/Index.cshtml
+++ b/WebApplication2/Views/Student/Index.cshtml
@@ -64,7 +64,7 @@
                 </ul>
               </li>
 
-                     <li class="text-end pe-4 me-4 border-dark search-btn">
+     <li class="text-end pe-4 me-4 border-dark search-btn">
                             <div class="search-form">
                                 <form method="post" action="index.html">
                                     <div class="form-group">
@@ -75,18 +75,18 @@
                                     </div>
                                 </form> 
                             </div> 
-              </li> 
+                      </li> 
 
-              <li class="nav-item ">
-                <a class="nav-link" href="index.html">For Instructors
+            <li class="nav-item ">
+                <a class="nav-link" href="index.html">Add Review
                 </a>
               </li> 
               
               <li class="nav-item">
-                <a href="../templatemo_546_sixteen_clothing/login.html" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                <a href="../Laern consult project/login.html" class="nav-link" role="button" data-bs-toggle="button">Signout</a>
               </li>
               <li class="nav-item">
-                <a href="../templatemo_546_sixteen_clothing/signup.html" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
+                <a href="../Laern consult project/signup.html" class="nav-link" role="button" data-bs-toggle="button">Profile</a>
               </li>
             </ul>
          
