--- a/WebApplication2/Views/_ViewImports.cshtml
+++ b/WebApplication2/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebApplication2
-@using WebApplication2.Models
+﻿@using first
+@using first.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
