--- a/WebApplication2/Views/Student/Profile.cshtml
+++ b/WebApplication2/Views/Student/Profile.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-  <html>
+<html>
 <head>
 
     <meta charset="utf-8">
@@ -21,13 +21,14 @@
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
+    <link href="~/css/StyleSheet.css" rel="stylesheet">
 
 
 </head>
 
 
 
-<body >
+<body>
 
 
     <div id="preloader">
@@ -52,7 +53,6 @@
 
                 <div class="nav-item" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                     </ul>
 
                 </div>
@@ -70,44 +70,136 @@
 
 
 
-        <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-            <div class="card p-4"> 
-                <div class=" image d-flex flex-column justify-content-center align-items-center">
+    <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+        <div class=" p-4">
+            <div class=" image d-flex flex-column justify-content-center align-items-center">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="~/images/more-info.jpg" height="100" width="100" />
                 </button>
 
-                        <span class="name mt-3"> osama </span> 
+                <span class="name mt-3"> osama </span>
 
-                        <span class="idd">  osama </span> 
+                <span class="idd">  osama </span>
 
-                        <div class="d-flex flex-row justify-content-center align-items-center gap-2"> 
-                            <span class="idd1">Oxc4c16a645_b21a</span> <span><i class="fa fa-copy"></i></span>
-                        </div>
+                <div class="d-flex flex-row justify-content-center align-items-center gap-2">
+                    <span class="idd1">Oxc4c16a645_b21a</span> <span><i class="fa fa-copy"></i></span>
+                </div>
 
-                        <div class="d-flex flex-row justify-content-center align-items-center mt-3">
-                            <span class="number">1069 <span class="follow">Followers</span></span> 
-                        </div>
+                <div class="d-flex justify-content-between align-items-center mt-4 px-4">
+
+                    <div class="stats">
+                        <h6 class="mb-0">Followers</h6>
+                        <span>8,797</span>
+
+                    </div>
+
+
+                    <div class="stats">
+                        <h6 class="mb-0">Projects</h6>
+                        <span>142</span>
+
+                    </div>
+
+
+                    <div class="stats">
+                        <h6 class="mb-0">Ranks</h6>
+                        <span>129</span>
+
+                    </div>
+
+                </div>
 
                 <div class=" d-flex mt-2">
-                    <button class="navbar-toggler btn btn-Dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Edit Profile</button> 
-                    
-                </div>
-               
-                <div class="text mt-3"> <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br>
-                     <br> Artist Creative Director by  with FND night. </span> 
+                    <button class="navbar-toggler btn btn-light" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Edit Profile</button>
                 </div>
 
-                <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span>
-                    <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span> 
-                </div> 
-                        
-              <div class=" px-2 rounded mt-4 date "> 
-                      <span class="join">Joined May,2021</span>
-              </div> 
-           </div> 
-           </div>
+                <div class="text mt-3">
+                    <span>
+                        Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br>
+                        <br> Artist Creative Director by  with FND night.
+                    </span>
+                </div>
+
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                </ul>
+
+
+            </div>
+
+            <div class="latest-products">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="section-heading">
+                                <h2>Recent Reviews</h2>
+
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="product-item">
+                                <!--<a href="#"><img src="assets/images/product_01.jpg" alt=""></a>-->
+                                <div class="down-content">
+                                    <!--<a href="#"><h4>Tittle goes here</h4></a>-->
+                                    <h4>UserName</h4>
+                                    <h6>Date</h6>
+                                    <ul class="stars">
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                    </ul>
+                                    <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="product-item">
+                                <!--<a href="#"><img src="assets/images/product_01.jpg" alt=""></a>-->
+                                <div class="down-content">
+                                    <!--<a href="#"><h4>Tittle goes here</h4></a>-->
+                                    <h4>UserName</h4>
+                                    <h6>Date</h6>
+                                    <ul class="stars">
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                    </ul>
+                                    <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="product-item">
+                                <!--<a href="#"><img src="assets/images/product_01.jpg" alt=""></a>-->
+                                <div class="down-content">
+                                    <!--<a href="#"><h4>Tittle goes here</h4></a>-->
+                                    <h4>UserName</h4>
+                                    <h6>Date</h6>
+                                    <ul class="stars">
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                    </ul>
+                                    <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+    </div>
 
 
     <!-- Bootstrap core JavaScript -->
@@ -124,10 +216,11 @@
     <script src="~/js/site3.js"></script>
     <script src="~/js/site4.js"></script>
 
-        <script type='text/javascript'>var myLink = document.querySelector('a[href="#"]');
-        myLink.addEventListener('click', function(e) {
-          e.preventDefault();
+    <script type='text/javascript'>
+        var myLink = document.querySelector('a[href="#"]');
+        myLink.addEventListener('click', function (e) {
+            e.preventDefault();
         });</script>
-                
-    </body>
- </html>
+
+</body>
+</html>
