--- a/WebApplication2/Views/Instructor/Profile.cshtml
+++ b/WebApplication2/Views/Instructor/Profile.cshtml
@@ -21,6 +21,7 @@
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
+    <link href="~/css/StyleSheet.css" rel="stylesheet">
 
 
 </head>
@@ -70,7 +71,7 @@
 
 
     <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-        <div class="card p-4">
+        <div class=" p-4">
             <div class=" image d-flex flex-column justify-content-center align-items-center">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="~/images/more-info.jpg" height="100" width="100" />
@@ -84,12 +85,32 @@
                     <span class="idd1">Oxc4c16a645_b21a</span> <span><i class="fa fa-copy"></i></span>
                 </div>
 
-                <div class="d-flex flex-row justify-content-center align-items-center mt-3">
-                    <span class="number">1069 <span class="follow">Followers</span></span>
+                <div class="d-flex justify-content-between align-items-center mt-4 px-4">
+
+                    <div class="stats">
+                        <h6 class="mb-0">Followers</h6>
+                        <span>8,797</span>
+
+                    </div>
+
+
+                    <div class="stats">
+                        <h6 class="mb-0">Projects</h6>
+                        <span>142</span>
+
+                    </div>
+
+
+                    <div class="stats">
+                        <h6 class="mb-0">Ranks</h6>
+                        <span>129</span>
+
+                    </div>
+
                 </div>
 
                 <div class=" d-flex mt-2">
-                    <button class="navbar-toggler btn btn-Dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Edit Profile</button>
+                    <button class="navbar-toggler btn btn-light" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Edit Profile</button>
                 </div>
 
                 <div class="text mt-3">
@@ -99,16 +120,20 @@
                     </span>
                 </div>
 
-                <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center">
-                    <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span>
-                    <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span>
-                </div>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                </ul>
 
-                <div class=" px-2 rounded mt-4 date ">
-                    <span class="join">Joined May,2021</span>
-                </div>
+
             </div>
+
+     
         </div>
+
+
     </div>
 
 
