--- a/WebApplication2/Views/Home/Course.cshtml
+++ b/WebApplication2/Views/Home/Course.cshtml
@@ -104,24 +104,98 @@
 
 <br />
 
-      <div class="container-fluid tm-section tm-section-2" >
-            <div class="row tm-media-row">
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <img src="~/images/product_01.jpg" alt="Image" class="img-fluid img-circle img-thumbnail tm-media-img">
-                </div>
 
-                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                    <div class="tm-media-text-container">
-                        <h3 class="tm-media-title tm-gray-text">Course Name </h3>
-                        <p class="tm-media-description tm-gray-text-2"> Course Description </p>
-                        <p class="tm-media-description tm-gray-text-2"> Instructor Name </p>
-                        <br>English  <span class="tm-media-description tm-gray-text-2" style="margin-left:100px">Beginner  </span>
-                        <br>Free     <span class="tm-media-description tm-gray-text-2" style="margin-left:100px">YuoTube  </span>
-                        <a href="#" class="tm-media-description tm-gray-text-2" style="margin-left:100px">YuoTube  </a>
-                    </div>                    
-                </div>
-            </div>          
+
+
+
+    <div class="how-section1">
+        <div class="row">
+            <div class="col-md-6 how-img">
+                <img src="~/images/product_01.jpg" class="rounded-circle img-fluid" alt="" />
+            </div>
+            <div class="col-md-6">
+                <h4>Course Name</h4>
+             
+                <h6 class="text-muted">
+                 Course Description
+                </h6>
+
+            </div>
         </div>
+
+    </div>
+
+
+
+<div class="container">
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                        <a class="nav-link " style="color:black; font-size:large" role="button" data-bs-toggle="button" href="#Info">Info</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link " style="color:black; font-size:large" role="button" data-bs-toggle="button" href="#">Reviews</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+        <section id="Info">
+     
+                <div class="row">
+
+                    <div class="col-md-6 col-sm-6">
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="media-heading">Platform</h3>
+                                <p> <a rel="nofollow noopener" href="https://youtube.com">Youtube</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="media-heading">Language</h3>
+                                <p>English </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="media-heading">Level</h3>
+                                <p> Beginner </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="media-heading">Instructor</h3>
+                                <p>Ali </p>
+                            </div>
+                        </div>
+                    </div>
+               
+            </div>
+        </section>
+    </div>
+
+
+
+
+
+
+
+
+   
+
+
+
+
 
 
 
