new edittions on course page

--- a/WebApplication2/Views/Home/Search.cshtml
+++ b/WebApplication2/Views/Home/Search.cshtml
@@ -22,6 +22,7 @@
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
+    <link href="~/css/StyleSheet.css" rel="stylesheet">
    
 
         <style>
@@ -423,7 +424,7 @@
                         </footer>
                  
                   
-                           </div>
+                     </div>
                   </div>
                   </div>
                   </div>
