--- a/WebApplication2/wwwroot/css/StyleSheet.css
+++ b/WebApplication2/wwwroot/css/StyleSheet.css
@@ -417,3 +417,49 @@ header[role="banner"] {
         .checkbox_collapse .panel.panel-default a[aria-expanded="true"] span:after {
             opacity: 1
         }
+
+/*
+.contact {
+    background: white;
+}
+
+    .contact .main_contact_text_area {
+        background-color: white;
+        overflow: hidden;
+       
+    }
+
+    .contact .single_message_right_info {
+        background: red;
+        padding: 120px 80px;
+       
+    }
+
+        .contact .single_message_right_info ul li a {
+            font-style: italic;
+            color: red;
+            margin-bottom: 15px;
+            display: inline-block;
+            font-size: 1.375rem;
+            font-family: 'amblelight';
+        }
+
+    .contact .single_contant_left .socail_bookmark a i {
+        color: red;
+        font-size: 1.375rem;
+        padding: 5px;
+        transition: all 0.6s;
+    }
+
+    .contact .single_contant_left .socail_bookmark a:hover i {
+        color: red;
+    }
+
+    .contact .single_contant_left {
+        padding: 40px;
+    }
+
+        .contact .single_contant_left .single_contant_left {
+        }
+
+    */
