--- a/WebApplication2/wwwroot/css/site.css
+++ b/WebApplication2/wwwroot/css/site.css
@@ -884,7 +884,7 @@ footer {
     margin-top: 100px;
 }
 
-.contact-form input {
+.contact-form input{
     font-size: 14px;
     width: 100%;
     height: 44px;
@@ -895,7 +895,17 @@ footer {
     margin-bottom: 30px;
 }
 
-    .contact-form input:focus {
+.contact-form ul {
+    font-size: 14px;
+
+    line-height: 42px;
+    width: 100%;
+    border: 1px solid #eee;
+    border-radius: 0px;
+    margin-bottom: 28px;
+}
+
+    .contact-form input:focus{
         box-shadow: none;
         border: 1px solid #eee;
     }
@@ -933,9 +943,14 @@ footer {
 }
 
     .contact-form button.filled-button:hover {
-        background-color: #121212;
+        background-color: #f33f3f;
         color: #fff;
     }
+
+.contact-form a:hover {
+       
+        color: red;
+}
 
 .accordion {
     margin-left: 30px;
@@ -972,7 +987,7 @@ footer {
         border-bottom: 1px solid #eee;
         padding: 15px 0px;
     }
-
+    
 /* Responsive Style */
 @media (max-width: 768px) {
     .banner .text-content {
