--- a/WebApplication2/Views/Home/Course.cshtml
+++ b/WebApplication2/Views/Home/Course.cshtml
@@ -96,34 +96,55 @@
 
     <div class="banner header-text">
         <div class="owl-banner owl-carousel">
+
         </div>
     </div>
 
     <div class="how-section1">
         <div class="row">
-            <div class="col-md-6 how-img">
-                <img src="~/images/product_01.jpg" class="rounded-circle img-fluid" alt="" />
+            <div class="col-md-4 how-img">
+                <img src="~/images/product_01.jpg" class="rounded-circle img-fluid" alt="" style="margin-bottom:12px;" />
+                <h4>Course Name</h4>
+                <h6 class="text-muted" style="margin-bottom:12px;">
+                    Course Description
+                </h6>
             </div>
-            <div class="col-md-6">
+
+            <div class="col-md-8">
 
                 <div class="product-item" style="border:none">
 
-                    <h4>Course Name</h4>
+                    <div class="row" >
 
-                    <h6 class="text-muted" style="margin-bottom:12px;">
-                        Course Description
-                    </h6>
+                        <div class="col-md-6">
+                                    <h6>Instructor</h6>
+                                    <h6>Language</h6>
+                                    <h6>Level</h6>
+                                    <h6>Topics covered</h6>
+                            <div class="down-content">
+                                <span style="left:1px;">(24)</span>
+                                <ul class="stars">                                   
+                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star"></i></li>
+                                </ul>
+                                
+                            </div>
+                         </div>
 
-                    <div class="col-xs-3">
-                        <h6>Instructor</h6>
-                        <h6>Language</h6>
-                    </div>
+                        <div class="col-md-2" >
+                                    <h6>Free</h6>
+                                    <h6>Last update</h6>
+                                     <h6>Platform</h6>
+                                    <h6><a href="http://www.youtube.com">link</a></h6>
+                                    <button class="btn btn-light " style="margin-top:20px;"> Review </button>
+                                </div>
 
-
-                    <div class="col-xs-3">
-                        <h6>Level</h6>
-                        <h6><a href="http://www.youtube.com">YouTube</a></h6>
-                    </div>
+                       
+                </div>
+                   
                 </div>
 
             </div>
@@ -154,7 +175,7 @@
                                     <h4>Rating</h4>
                                 </button>
                             </p>
-                            <div id="rate" class="collapse" style="margin:6px">
+                            <div id="rate" class="collapse" style="margin:4px">
                                 <div class="down-content ">
                                     <span class="stars btn">
                                         <i class="fa fa-star"></i>
@@ -310,7 +331,7 @@
 
                         <div class="padding">
 
-                            <div class="row">
+                            <div class="row" style="margin-top:50px;">
 
 
                                 <!-- BEGIN TABLE RESULT -->
