--- a/WebApplication2/Views/Student/Review.cshtml
+++ b/WebApplication2/Views/Student/Review.cshtml
@@ -100,6 +100,9 @@
         </div>
     </div>
 
+
+
+
     <div class="send-message">
         <div class="container">
             <div class="row">
@@ -114,39 +117,41 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <fieldset>
-                                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
+                                        <textarea name="review" rows="6" class="form-control" id="review" placeholder="Your Review" required=""></textarea>
                                     </fieldset>
                                 </div>
 
-                                <div class="section-heading">
-                                    <h2>Standard Questions</h2>
-                                </div>
 
-
-                                
-
-
-
-
-                                <div class="col-12">
-                                    <div lass="col-4" >
-                                        <h5 >Ease of language</h5>
-                                    </div>
+                                <!-- <div class="col-12">
+                                  
 
                                   
-                                        <ul class="pagination justify-content-end" style="border:none">
-                                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">6</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">7</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">8</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">9</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">10</a></li>
+                                        <ul class="pagination " style="border-radius:50%; border:none;">
+                                            <li class="page-item justify-content-start"><h5>Ease of language</h5></li>
+                                            <li class="page-item "><a class="page-link" href="#">1</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">2</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">3</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">4</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">5</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">6</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">7</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">8</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">9</a></li>
+                                            <li class="page-item "><a class="page-link" href="#">10</a></li>
 
                                         </ul>
+
+
+                                    <div class="col-md-12">
+                                        <h5>Ease of language</h5>
+                                        <ul class="pages">
+                                            <li><a href="#">1</a></li>
+                                            <li><a href="#">2</a></li>
+                                            <li><a href="#">3</a></li>
+                                            <li><a href="#">4</a></li>
+                                            <li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
+                                        </ul>
+                                    </div>
                                   
 
                                 </div>
@@ -217,7 +222,7 @@
 
                                 </div>
                                  
-                                <!--  <ul class="pagination justify-content-right">
+                                  <ul class="pagination justify-content-right">
                                     <h5>Ease of explaination</h5>
                                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                                     <li class="page-item"><a class="page-link" href="#">2</a></li>
@@ -257,20 +262,97 @@
                                     <li class="page-item"><a class="page-link" href="#">10</a></li>
                                 </ul>-->
                                
-                                                
-                               
-                          
+
+                            
+
+                                <div class="section-heading">
+                                    <h2>Standard Questions</h2>
+                                </div>
 
 
-                                <div class="col-lg-12">
-                                    <fieldset>
-                                        <button type="submit" id="form-submit" class="filled-button">Send Message</button>
-                                    </fieldset>
+                                <div class="choices">
+
+                                    <ul class="choice" style="border:none">
+                                        <li> <h5>Ease of language</h5> </li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                        <li><a href="#">5</a></li>
+                                        <li><a href="#">6</a></li>
+                                        <li><a href="#">7</a></li>
+                                        <li><a href="#">8</a></li>
+                                        <li><a href="#">9</a></li>
+                                        <li><a href="#">10</a></li>
+
+                                    </ul>
+
+
+                                    <ul class="choice" style="border:none">
+                                        <li> <h5>Ease of explaination</h5> </li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                        <li><a href="#">5</a></li>
+                                        <li><a href="#">6</a></li>
+                                        <li><a href="#">7</a></li>
+                                        <li><a href="#">8</a></li>
+                                        <li><a href="#">9</a></li>
+                                        <li><a href="#">10</a></li>
+
+                                    </ul>
+
+
+
+                                    <ul class="choice" style="border:none">
+                                        <li> <h5>Quality of sound</h5> </li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                        <li><a href="#">5</a></li>
+                                        <li><a href="#">6</a></li>
+                                        <li><a href="#">7</a></li>
+                                        <li><a href="#">8</a></li>
+                                        <li><a href="#">9</a></li>
+                                        <li><a href="#">10</a></li>
+
+                                    </ul>
+
+
+                                    <ul class="choice" style="border:none">
+                                        <li>  <h5>Practical example</h5> </li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                        <li><a href="#">5</a></li>
+                                        <li><a href="#">6</a></li>
+                                        <li><a href="#">7</a></li>
+                                        <li><a href="#">8</a></li>
+                                        <li><a href="#">9</a></li>
+                                        <li><a href="#">10</a></li>
+
+                                    </ul>
+
+
                                 </div>
                         </div>
+                            <div class="col-lg-12">
+                                <fieldset>
+                                    <button type="submit" id="form-submit" class="filled-button">Send </button>
+                                </fieldset>
+                            </div>
                         </form>
                     </div>
+
+
                 </div>
+
+
+
+
             </div>
             <footer class="footer_area section_gap_top">
                 <div class="container-fluid">
@@ -278,9 +360,9 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="copy_right_text">
                                 <p>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                   
                                     All Copyrights &copy reserved
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                   
                                 </p>
                             </div>
                         </div>
@@ -296,12 +378,13 @@
                         </div>
                     </div>
                 </div>
-            </footer>
+    </footer>
         </div>
 
     </div>
 
-   
+
+
 
     
     <!-- END SEARCH RESULT -->
