--- a/WebApplication2/wwwroot/css/site.css
+++ b/WebApplication2/wwwroot/css/site.css
@@ -943,7 +943,7 @@ footer {
 }
 
     .contact-form button.filled-button:hover {
-        background-color: #f33f3f;
+        background-color: #121212;
         color: #fff;
     }
 
